# projecto_programacao

./: .gitignore  CMakeLists.txt  README.md  flake.nix  multitool.c  multitool_gui.c  premake5.lua  request_admin.bat
screens/: menu_screen.c  menu_screen.h
src/: main.c  weatherapi.c  weatherapi.h
